<resources>
    <string name="app_name">AS_DeliveryReport</string>
    <string name="project_name">Amar Shasroy</string>

    <string name="main_text">Delivery Management System</string>

    <string name="delivery_report_customer_name">Customer name</string>
    <string name="delivery_report_customer_name_override">Update Customer name</string>
    <string name="delivery_report_on_behalf_of_input_hint">F R Summit</string>
    <string name="delivery_report_order_number_text">Order number</string>
    <string name="delivery_report_order_number_text_override">Update Order number</string>
    <string name="delivery_report_order_number_input_hint">0123456</string>
    <string name="delivery_report_order_by_text">Order by</string>
    <string name="delivery_report_order_by_text_override">Update Order by</string>
    <string name="delivery_report_order_by_input_hint">F R Summit</string>
    <string name="delivery_report_order_date_text">Order date</string>
    <string name="delivery_report_order_date_input_hint">21st October, 2020</string>
    <string name="delivery_report_delivery_date_text">Delivery date</string>
    <string name="delivery_report_delivery_date_input_hint">21st October, 2020</string>
    <string name="delivery_report_delivery_to_name_text">Delivery to name</string>
    <string name="delivery_report_delivery_to_name_text_override">Update Delivery to name</string>
    <string name="delivery_report_delivery_to_name_input_hint">F R Summit</string>
    <string name="delivery_report_status_text">Status</string>
    <string name="delivery_report_status_input_hint">Order status</string>
    <string name="delivery_report_comment_text">Comment</string>
    <string name="delivery_report_comment_input_hint">Your comment...</string>

    <string name="delivery_report_submit_btn_text">Save Report</string>
    <string name="delivery_report_cancel_btn_text">Cancel Report</string>

    <string name="user_img_upload">Upload photo</string>
    <string name="user_sign_img_upload">Upload signature</string>

    <string name="ops">Ops, You are not a delivery man. Please registration as Shasroy Leader or a delivery man.</string>
    <string name="visit_website">www.amarshasroy.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="login_email_hint">Enter you email</string>
    <string name="password">**********</string>


</resources>