<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DeliveryReport"
    android:background="@drawable/report_input_background">

    <RelativeLayout
        android:id="@+id/common_logo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="commonLogoClickHandler">

        <include
            android:id="@+id/common_logo_section_"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            layout="@layout/common_logo"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/common_logo_section"
        android:padding="6dp"
        android:layout_margin="4dp"
        android:background="@drawable/input_border">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/delivery_report_input_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="6dp"
                android:gravity="left">

                <RelativeLayout
                    android:id="@+id/delivery_report_on_behalf_of_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/delivery_report_on_behalf_of_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:hint="@string/delivery_report_on_behalf_of_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color"
                        android:ems="10"
                        android:inputType="text"
                        android:background="@drawable/et_custom"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_order_number_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/delivery_report_on_behalf_of_section">

                    <EditText
                        android:id="@+id/delivery_report_order_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:hint="@string/delivery_report_order_number_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color"
                        android:ems="10"
                        android:inputType="text"
                        android:background="@drawable/et_custom"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_order_by_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/delivery_report_order_number_section">

                    <EditText
                        android:id="@+id/delivery_report_order_by_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:hint="@string/delivery_report_order_by_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color"
                        android:ems="10"
                        android:inputType="text"
                        android:background="@drawable/et_custom"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_order_date_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_custom"
                    android:layout_below="@+id/delivery_report_order_by_section">

                    <TextView
                        android:id="@+id/delivery_report_order_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="6dp"
                        android:text="@string/delivery_report_order_date_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color_2"
                        android:drawablePadding="10dp"/>


                    <DatePicker
                        android:id="@+id/delivery_report_order_date"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"
                        android:layout_below="@+id/delivery_report_order_date_text"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_delivery_date_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/et_custom"
                    android:layout_below="@+id/delivery_report_order_date_section">

                    <TextView
                        android:id="@+id/delivery_report_delivery_date_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="15dp"
                        android:paddingTop="6dp"
                        android:text="@string/delivery_report_delivery_date_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color_2"
                        android:drawablePadding="10dp"/>


                    <DatePicker
                        android:id="@+id/delivery_report_delivery_date"
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:datePickerMode="spinner"
                        android:calendarViewShown="false"
                        android:layout_below="@+id/delivery_report_delivery_date_text"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_delivered_to_name_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/delivery_report_delivery_date_section">

                    <EditText
                        android:id="@+id/delivery_report_delivered_to_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:hint="@string/delivery_report_delivery_to_name_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color"
                        android:ems="10"
                        android:inputType="text"
                        android:background="@drawable/et_custom"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_comment_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_below="@+id/delivery_report_delivered_to_name_section">

                    <EditText
                        android:id="@+id/delivery_report_comment_input"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:padding="15dp"
                        android:hint="@string/delivery_report_comment_text"
                        android:textSize="18dp"
                        android:textColor="@color/input_text_color"
                        android:ems="10"
                        android:inputType="text"
                        android:background="@drawable/et_custom"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/delivery_report_submit_section"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:layout_below="@+id/delivery_report_comment_section">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/delivery_report_submit_btn_text"
                        android:textColor="#025377"
                        android:textSize="18dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:textAllCaps="false"
                        android:onClick="deliveryReportSubmitHandler"
                        android:background="@drawable/report_submit_button_background"/>
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>