<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NonDeliveryMan"
    android:background="@drawable/report_input_background">

    <RelativeLayout
        android:id="@+id/non_delivery_man_logo_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/non_delivery_man_logo_section_part_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/non_delivery_man_logo_section_part_1_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerVertical="true"
                android:src="@drawable/as_cart_logo_icon"/>

            <TextView
                android:id="@+id/non_delivery_man_logo_section_part_1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_name"
                android:textColor="@color/main_text"
                android:textSize="40dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/non_delivery_man_logo_section_part_1_icon"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/non_delivery_man_logo_section_part_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_below="@+id/non_delivery_man_logo_section_part_1">

            <ImageView
                android:id="@+id/non_delivery_man_logo_section_part_2_icon"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:src="@drawable/van_icon"/>

            <TextView
                android:id="@+id/non_delivery_man_logo_section_part_2_text"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:text="@string/main_text"
                android:textColor="@color/main_text"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/non_delivery_man_logo_section_part_2_icon"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/non_delivery_man_suggestion_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/non_delivery_man_logo_section">

        <RelativeLayout
            android:id="@+id/non_delivery_man_suggestion_text_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/non_delivery_man_suggestion_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ops"
                android:textColor="@color/ops"
                android:textSize="18dp"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_marginLeft="10dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/non_delivery_man_suggestion_url_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_below="@+id/non_delivery_man_suggestion_text_section">

            <Button
                android:id="@+id/report_image_upload_submit_section_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:onClick="shasroyLeaderHandler"
                android:text="Become a Shasroy Leader"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:background="@drawable/report_submit_button_background"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/non_delivery_man_suggestion_url_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_below="@+id/non_delivery_man_suggestion_url_1">

            <Button
                android:id="@+id/report_image_upload_sign_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:onClick="deliveryManHandler"
                android:text="Apply for Delivery Man"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textAllCaps="false"
                android:background="@drawable/report_submit_button_background"/>
        </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/visit_website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/visit_website"
        android:textColor="@color/visit"
        android:textSize="18dp"
        android:textStyle="bold"
        android:gravity="center"
        android:onClick="visitWebsiteHandler"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>